--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,5 +22,13 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"/>
 
+        <Button
+            android:id="@+id/showProductBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Show Product Option"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"/>
+
 
 </LinearLayout>
