--- a/app/src/main/res/layout/activity_add_product_to_pantry.xml
+++ b/app/src/main/res/layout/activity_add_product_to_pantry.xml
@@ -5,8 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".addProductToPantry">
+
+    <include
+        layout="@layout/toolbar"/>
 
     <!-- Product Name -->
     <TextView
@@ -14,15 +16,18 @@
         android:layout_height="wrap_content"
         android:text="Product Name:"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"/>
 
     <TextView
         android:id="@+id/productText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Name"
-        android:textSize="20dp"
-        android:layout_marginBottom="15dp"/>
+        android:textSize="30dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"/>
 
     <!-- Category -->
     <TextView
@@ -30,15 +35,17 @@
         android:layout_height="wrap_content"
         android:text="Category:"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"/>
 
     <TextView
         android:id="@+id/categoryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Category"
-        android:textSize="20dp"
-        android:layout_marginBottom="15dp"/>
+        android:textSize="30dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp"/>
 
     <!-- Quantity -->
     <TextView
@@ -46,13 +53,15 @@
         android:layout_height="wrap_content"
         android:text="Quantity:"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="15dp">
 
         <Button
             android:id="@+id/decrementButton"
@@ -70,7 +79,7 @@
             android:gravity="center"
             android:text="1"
             android:textColor="@color/black"
-            android:textSize="20dp"/>
+            android:textSize="30dp"/>
 
         <Button
             android:id="@+id/incrementButton"
@@ -88,27 +97,30 @@
         android:layout_height="wrap_content"
         android:text="Expiry Date:"
         android:textStyle="bold"
-        android:textSize="30dp"/>
+        android:textSize="20dp"
+        android:layout_marginLeft="15dp"/>
 
     <!-- Display Expiry Date -->
     <TextView
         android:id="@+id/displayExpiryDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:text="Expiry Date"/>
+        android:textSize="30dp"
+        android:text="Expiry Date"
+        android:layout_marginLeft="15dp"/>
 
     <Button
         android:id="@+id/datepickerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pick a Date"/>
+        android:text="Pick a Date"
+        android:layout_marginLeft="15dp"/>
 
     <Button
         android:id="@+id/addToPantryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add To Pantry"
+        android:text="Add To Kitchen"
         android:layout_gravity="center"
         android:layout_marginTop="100dp"/>
 
