--- a/app/src/main/res/layout/activity_show_product_option.xml
+++ b/app/src/main/res/layout/activity_show_product_option.xml
@@ -7,10 +7,15 @@
     android:orientation="vertical"
     tools:context=".showProductOption">
 
+    <include
+        layout="@layout/toolbar"/>
+
     <EditText
         android:id="@+id/searchBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:hint="Search..."/>
 
     <LinearLayout
@@ -25,7 +30,8 @@
         android:layout_weight="1"
         android:layout_height="48dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/createButton" />
+        app:layout_constraintBottom_toTopOf="@+id/createButton"
+        android:layout_marginLeft="15dp"/>
 
         <Space
             android:layout_width="80dp"
@@ -35,7 +41,8 @@
         android:id="@+id/createButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Create" />
+        android:text="Create"
+        android:layout_marginRight="15dp"/>
 
     </LinearLayout>
 
@@ -45,6 +52,8 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@+id/selectBox" />
