--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,5 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.DeliciFind" parent="Base.Theme.TestingRecipeRecommendation" />
+    <style name="Theme.DeliciFind" parent="Base.Theme.DeliciFind" />
 </resources>
