--- a/app/src/main/res/layout/activity_show_pantry_list.xml
+++ b/app/src/main/res/layout/activity_show_pantry_list.xml
@@ -5,28 +5,31 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include
-        layout="@layout/toolbar"/>
-
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Kitchen Inventory"-->
-<!--        android:id="@+id/pantryInventoryText"-->
-<!--        android:textStyle="bold"-->
-<!--        android:textSize="30sp"-->
-<!--        android:gravity="center"-->
-<!--        android:padding="16dp" />-->
+    <include layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pantryRV"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pantryInventoryText" />
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"/>
+
+    <!-- Floating Action Button -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:background="@drawable/custom_add_background"
+        android:clickable="true"
+        android:contentDescription="Add Item"
+        app:borderWidth="5dp"
+        app:elevation="0dp"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/baseline_add_24"
+        app:useCompatPadding="false" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
@@ -38,6 +41,5 @@
         app:itemIconTint="@drawable/item_selector"
         app:itemRippleColor="@android:color/transparent"
         app:menu="@menu/bottom_menu" />
-
 
 </LinearLayout>
