--- a/app/src/main/res/layout/activity_add_product_to_pantry.xml
+++ b/app/src/main/res/layout/activity_add_product_to_pantry.xml
@@ -10,6 +10,15 @@
     <include
         layout="@layout/toolbar"/>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_margin="15dp"
+        android:src="@mipmap/ic_launcher"
+        android:id="@+id/poImage"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/black"/>
+
     <!-- Product Name -->
     <TextView
         android:layout_width="wrap_content"
@@ -17,8 +26,7 @@
         android:text="Product Name:"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginLeft="15dp"/>
 
     <TextView
         android:id="@+id/productText"
@@ -106,7 +114,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:text="Expiry Date"
+        android:text="No selected date"
         android:layout_marginLeft="15dp"/>
 
     <Button
@@ -122,6 +130,6 @@
         android:layout_height="wrap_content"
         android:text="Add To Kitchen"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"/>
+        android:layout_marginTop="60dp"/>
 
 </LinearLayout>
