--- a/app/src/main/res/layout/activity_show_product_option.xml
+++ b/app/src/main/res/layout/activity_show_product_option.xml
@@ -13,10 +13,12 @@
     <EditText
         android:id="@+id/searchBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:hint="Search..."/>
+        android:layout_marginTop="10dp"
+        android:hint="  Search..."
+        android:background="@drawable/custom_border"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,9 +31,9 @@
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/createButton"
-        android:layout_marginLeft="15dp"/>
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="15dp"
+        android:background="@drawable/custom_spinner_background"/>
 
         <Space
             android:layout_width="80dp"
@@ -54,8 +56,6 @@
     android:layout_weight="1"
     android:layout_marginLeft="15dp"
     android:layout_marginRight="15dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/selectBox" />
+    android:layout_marginTop="10dp"/>
 
 </LinearLayout>
