--- a/app/src/main/res/layout/recipe_by_ingredients.xml
+++ b/app/src/main/res/layout/recipe_by_ingredients.xml
@@ -48,7 +48,7 @@
 
         <TextView
             android:id="@+id/textView_MissedCount"
-            android:text="Missed Ingredient Count"
+            android:text="Missing Ingredient Count"
             android:singleLine="true"
             android:marqueeRepeatLimit="marquee_forever"
             android:scrollHorizontally="true"
