--- a/app/src/main/res/layout/activity_show_pantry_list.xml
+++ b/app/src/main/res/layout/activity_show_pantry_list.xml
@@ -15,7 +15,9 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="10dp"
         android:hint="  Search..."
-        android:background="@drawable/custom_border"/>
+        android:background="@drawable/custom_border"
+        android:focusable="true"
+        android:focusableInTouchMode="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
