--- a/app/src/main/res/layout/activity_add_product_to_pantry.xml
+++ b/app/src/main/res/layout/activity_add_product_to_pantry.xml
@@ -21,11 +21,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_below="@+id/toolbar">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_margin="15dp"
         android:src="@mipmap/ic_launcher"
         android:id="@+id/poImage"
@@ -46,7 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Name"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"/>
 
@@ -64,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Category"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:layout_marginBottom="15dp"
         android:layout_marginLeft="15dp"/>
 
@@ -78,7 +79,7 @@
         android:layout_marginLeft="15dp"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginBottom="15dp"
@@ -100,7 +101,7 @@
             android:gravity="center"
             android:text="1"
             android:textColor="@color/black"
-            android:textSize="30dp"/>
+            android:textSize="25dp"/>
 
         <Button
             android:id="@+id/incrementButton"
@@ -126,7 +127,7 @@
         android:id="@+id/displayExpiryDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="25dp"
         android:text="No selected date"
         android:layout_marginLeft="15dp"/>
 
