--- a/app/src/main/res/layout/recipe_instructions.xml
+++ b/app/src/main/res/layout/recipe_instructions.xml
@@ -15,6 +15,7 @@
             android:text="Step 1"
             android:textSize="16dp"
             android:padding="4dp"
+            android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
