--- a/app/src/main/res/layout/recipe_by_ingredients.xml
+++ b/app/src/main/res/layout/recipe_by_ingredients.xml
@@ -60,6 +60,31 @@
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"/>-->
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="8dp"
+                android:src="@drawable/baseline_access_time_filled_24"/>
+            <TextView
+                android:id="@+id/textView_readyInMinutes"
+                android:text="Ready In Minutes"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:padding="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+
+
     </LinearLayout>
 
 
