--- a/app/src/main/res/layout/recipe_by_ingredients.xml
+++ b/app/src/main/res/layout/recipe_by_ingredients.xml
@@ -63,6 +63,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -76,7 +77,6 @@
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="14sp"
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
