--- a/app/src/main/res/layout/recipe_by_ingredients.xml
+++ b/app/src/main/res/layout/recipe_by_ingredients.xml
@@ -23,7 +23,8 @@
             android:textStyle="bold"
             android:textColor="@color/purple_700"
             android:textSize="22sp"
-            android:padding="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
