--- a/app/src/main/res/layout/activity_show_pantry_list.xml
+++ b/app/src/main/res/layout/activity_show_pantry_list.xml
@@ -7,16 +7,21 @@
 
     <include layout="@layout/toolbar" />
 
-    <EditText
-        android:id="@+id/searchBar"
+    <androidx.appcompat.widget.SearchView
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="10dp"
-        android:hint="  Search..."
-        android:background="@drawable/custom_border"
-        android:focusableInTouchMode="true"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
+        android:id="@+id/searchBar"
+        app:iconifiedByDefault="false"
+        app:searchHintIcon="@null"
+        app:queryHint="Search..."
+        android:background="@drawable/lavender_border"
+        app:closeIcon="@drawable/baseline_clear_24"
+        app:searchIcon="@drawable/baseline_search_24"
+        android:focusable="false"
+        android:focusableInTouchMode="false"/>
 
     <LinearLayout
         android:layout_width="match_parent"
